--- a/index.html
+++ b/index.html
@@ -11,6 +11,42 @@
 <body>
     <header>
         <h1>Todo List</h1>
+        <form id="new-task-form">
+            <input 
+                type="text" 
+                name="" 
+                id= "new-task-input"
+                placeholder = "Input your task here"
+            />
+            <input 
+                type="submit" 
+                id="new-task-submit"
+                value="Add Task"
+            />
+        </form>
     </header>
+    <main>
+        <section class = "task-list">
+            <h2>Tasks</h2>
+
+            <div id = "tasks">
+                <div class="task">
+                    <div class = "content">
+                        <input 
+                            type="text" 
+                            class="text"
+                            value="My shiny task" 
+                            readonly
+                        />
+                    </div>
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="edit">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="main.js"></script>
 </body>
 </html>
