--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/cda9ccb00c.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -40,8 +41,8 @@
                         />
                     </div>
                     <div class="actions">
-                        <button class="edit">Edit</button>
-                        <button class="edit">Delete</button>
+                        <button class="edit"><i class="far fa-edit"></i></button>
+                        <button class="delete"><i class="far fa-trash-alt"></i></button>
                     </div>
                 </div>
             </div>
