--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 type="text" 
                 name="" 
                 id= "new-task-input"
-                placeholder = "Input your task here"
+                placeholder = "What's on your mind?"
             />
             <input 
                 type="submit" 
@@ -31,7 +31,7 @@
             <h2>Tasks</h2>
 
             <div id = "tasks">
-                <div class="task">
+                <!-- <div class="task">
                     <div class = "content">
                         <input 
                             type="text" 
@@ -44,7 +44,7 @@
                         <button class="edit"><i class="far fa-edit"></i></button>
                         <button class="delete"><i class="far fa-trash-alt"></i></button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
